
    o   New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.


BUG FIXES

    o	The postscript() output for setting text is faster and smaller.

    o	Subsetting a data frame with duplicate column names without
	selecting columns (e.g. z[i,]) no longer makes the column
	names unique.




	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.0 patched


NEW FEATURES

    o	sum() now has a method for "difftime" objects (via the Summary
	group).

	max(), min() and range() applied to "difftime" object(s) now
	return a result in the common units of the objects, if there
	is one.

    o	installed.packages() is now tolerant of malformed DESCRIPTION
	files in installed packages (it ignores them, with a warning).


UTILITIES

    o	R CMD build now also uses a Makevars file for cleaning up src/.


BUG FIXES

    o	add1.glm() no longer warns if applied to a binomial glm with a
	factor response.

    o	aggregate.data.frame() now does something sensible with a
	zero-column 'x' rather than failing with an obscure error
	message.  It gives an explicit error message if called with a
	zero-row 'x'.

    o	qt() now works for 0 < df < 1.

    o	integrate() now accepts integer results from f(): as
	documented, but only double was accepted.

    o	contrib.url() produced incorrect URL for the type
        "mac.binary".

    o   pairwise.wilcox.test() did not pass on the 'paired' argument
        (caught by Matthias Kohl)

    o	bmp(), jpeg(), and png() on unix with type="cairo" would segfault
	on closure if the output file could not be opened.

    o	tiff() on unix would not write the output file for the first page
	when multiple pages were plotted.

    o   str(1 + structure(1, class = "test")) no longer recurses "infinitely".

    o	pf(x, .., ncp, lower.tail=FALSE, log=TRUE) is much more accurate